[gd_scene load_steps=4 format=3 uid="uid://ccnsnw0rpk5ci"]

[ext_resource type="Script" path="res://entities/enemies/fish.gd" id="1_vvmik"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sgk4w"]
radius = 12.0
height = 32.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pvqn0"]
size = Vector2(48, 24)

[node name="fish" type="CharacterBody2D"]
script = ExtResource("1_vvmik")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_sgk4w")
debug_color = Color(0.945098, 0, 0, 0.419608)

[node name="PlayerSensorRight" type="RayCast2D" parent="."]
target_position = Vector2(96, 0)

[node name="PlayerSensorLeft" type="RayCast2D" parent="."]
target_position = Vector2(-96, 0)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_pvqn0")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
